--- a/Keep Fit/Base.lproj/Main.storyboard
+++ b/Keep Fit/Base.lproj/Main.storyboard
@@ -131,11 +131,47 @@
                     </view>
                     <navigationItem key="navigationItem" id="e0K-U8-4Sy">
                         <barButtonItem key="backBarButtonItem" title="Go Back" id="58g-Fb-jlm"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="edit" id="M2g-Dz-met">
+                            <connections>
+                                <segue destination="4uL-hu-mZb" kind="push" identifier="showEditGoal" id="BYg-sL-HhW"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5mT-6q-Fyc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="635.73333333333335" y="-359.73333333333335"/>
+        </scene>
+        <!--Edit Goal View Controller-->
+        <scene sceneID="sjF-z7-pIb">
+            <objects>
+                <viewController id="4uL-hu-mZb" customClass="EditGoalViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Wvq-0Z-gGv"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZCx-Ln-0FG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5DY-Gr-0eS">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="mH9-kk-yHC">
+                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="vsZ-De-yPu">
+                            <connections>
+                                <segue destination="Opy-hE-SPC" kind="unwind" unwindAction="unwindToView:" id="BIn-5Q-GMe"/>
+                            </connections>
+                        </barButtonItem>
+                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="jOc-um-6UR">
+                            <connections>
+                                <segue destination="Opy-hE-SPC" kind="unwind" unwindAction="unwindToView:" id="dFr-Re-MK5"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="CGO-wx-c3O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="Opy-hE-SPC" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1068" y="-360"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="b5u-ay-RJb">
