removed whitespace from goal names and sanity check for duplicate names

--- a/Keep Fit/Base.lproj/Main.storyboard
+++ b/Keep Fit/Base.lproj/Main.storyboard
@@ -47,7 +47,7 @@
                     <navigationItem key="navigationItem" title="Goals" id="kPE-WU-Ofd">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="z4i-pw-33h">
                             <connections>
-                                <segue destination="LH5-hh-SQ8" kind="modal" id="Cnp-Bv-8Jo"/>
+                                <segue destination="LH5-hh-SQ8" kind="modal" identifier="addGoal" id="Cnp-Bv-8Jo"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
